[package]
name = "min-max"
version = "0.1.0"
authors = ["Tianyi Shi <ShiTianyi2001@outlook.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/TianyiShi2001/min-max"
description = "max! and min! macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
partial-min-max = "0.4.0"